[2016-??-??] - Version 1.0.3dev

[2016-06-23] - Version 1.0.2
	* Fixed bug in ExcelSheet::addPictureDim() (see issue #120)
	* Fixed bug in ExcelSheet::isLicensed() (see issue #122)
	* Added new methods (requires LibXL 3.6.2)
		- ExcelBook::setAutoFitArea()
		- ExcelBook::printArea()
		- ExcelBook::printRepeatCols()
		- ExcelBook::printRepeatRows()
	* Added support for LibXL 3.6.3
	* ExcelSheet::addPictureDim() & ExcelSheet::addPictureScaled() now support position parameters
	* Includes official PHP7 release
	* Added support for libxl compiled from source

[2015-02-26] - Version 1.0.1
	* Added methods
		- ExcelBook::sheetType()
		- ExcelSheet::colHidden()
		- ExcelSheet::rowHidden()
		- ExcelSheet::setColHidden()
		- ExcelSheet::setRowHidden()
		- ExcelSheet::isLicensed()
	* Added new methods (requires LibXL 3.6.0)
		- ExcelSheet::hyperlinkSize()
		- ExcelSheet::hyperlink()
		- ExcelSheet::delHyperlink()
		- ExcelSheet::addHyperlink()
		- ExcelSheet::mergeSize()
		- ExcelSheet::merge()
		- ExcelSheet::delMergeByIndex()
		- ExcelSheet::splitInfo()
	* Added data type argument for ExcelSheet::writeCol() (see issue #29)
	* Fixed bug in ExcelSheet::read() (see issue #86)
	* Fixed bug in ExcelBook::setDefaultFont() (see issue #66)
	* Added autofit support for ExcelBook::setColWidth()
	* Added implicit formula recognition on ExcelSheet::write() operations (prefix formula with '=')
	* Added multibyte support for license name and license key (see issue #60 and README)
	* Added default date format when writing dates
	* Added ExcelSheet::__construct(ExcelBook $book, $name) for customized ExcelSheets
	* Added warnings on read/write errors
	* Removed final keyword for ExcelFormat::__construct(ExcelBook $book)
	* Removed invalid PAPER_* constants in ExcelSheet
	* Removed invalid COLOR_* constants in ExcelFormat
	* Updated documentation and README
	* Changed php.ini variable name: excel.ini_skip_empty --> excel.skip_emtpy

[2014-06-03] - Version 1.0