@@ -1,4 +1,5 @@
 [2016-??-??] - Version 1.0.3dev
+	* Fixed crash when trying to read an empty file
 
 [2016-06-23] - Version 1.0.2
 	* Fixed bug in ExcelSheet::addPictureDim() (see issue #120)
